--- a/style.css
+++ b/style.css
@@ -294,6 +294,12 @@ header.scrolled {
 
 /* Responsive Styles */
 @media screen and (max-width: 780px) {
+    header{
+    
+    padding: 20px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Horizontal offset, vertical offset, blur radius, color */
+   
+}
     .navlist {
         padding: 5% 0;
         display: none;
