--- a/style.css
+++ b/style.css
@@ -294,12 +294,13 @@ header.scrolled {
 
 /* Responsive Styles */
 @media screen and (max-width: 780px) {
-    header{
+   header{
     
     padding: 20px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Horizontal offset, vertical offset, blur radius, color */
    
 }
+   }
     .navlist {
         padding: 5% 0;
         display: none;
@@ -318,6 +319,7 @@ header.scrolled {
         text-align: center;
         position: absolute;
         left: 50%;
+      
         transform: translateX(-50%);
     }
 
@@ -332,6 +334,7 @@ header.scrolled {
 
     .subtitle {
         display: block;
+        
     }
 
     .navlist.open {
