--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     overflow-x: hidden;
-   
     overflow-x: hidden; /* Prevent horizontal scroll */
 }
 
@@ -13,7 +12,7 @@ header {
     width: 100%;
     padding: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Horizontal offset, vertical offset, blur radius, color */
-   
+
     transition: background-color 0.3s;
     z-index: 1000;
     display: flex;
@@ -142,6 +141,18 @@ header.scrolled {
     position: relative; /* Needed for absolute positioning of h6 */
 }
 
+#home::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1c372065; /* Dark overlay with transparency */
+    z-index: 1; /* Place above the background image */
+}
+
+
 .home-content {
     z-index: 1;
     padding: 20px;
@@ -228,7 +239,7 @@ header.scrolled {
     padding: 1.5rem;
     border-radius: 8px;
 
-    width: 200px; /* Set a fixed width for each item */ 
+    width: 220px; /* Set a fixed width for each item */ 
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -246,10 +257,13 @@ header.scrolled {
     border-radius: 8px;
 }
 
+.item .item-label{
+    text-transform: capitalize;
+}
 .item .price {
     font-weight: bold;
     color: #1C3720;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 /* Responsive Design */
@@ -294,13 +308,7 @@ header.scrolled {
 
 /* Responsive Styles */
 @media screen and (max-width: 780px) {
-   header{
-    
-    padding: 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Horizontal offset, vertical offset, blur radius, color */
    
-}
-   }
     .navlist {
         padding: 5% 0;
         display: none;
@@ -334,6 +342,7 @@ header.scrolled {
 
     .subtitle {
         display: block;
+        font-size: 0.7rem;
         
     }
 
@@ -347,6 +356,7 @@ header.scrolled {
 
     header {
         background-color: #1C3720;
+        padding:20px;
     }
 
     header nav li:not(:last-child):hover::after {
